--- a/road100_description/CMakeLists.txt
+++ b/road100_description/CMakeLists.txt
@@ -23,4 +23,14 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(
+  DIRECTORY
+    launch
+    meshes
+    rviz
+    urdf
+  DESTINATION
+    share/${PROJECT_NAME}/
+)
+
 ament_package()
