--- a/road100_slam/CMakeLists.txt
+++ b/road100_slam/CMakeLists.txt
@@ -23,4 +23,14 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(
+  DIRECTORY
+    config
+    launch
+    maps
+    rviz
+  DESTINATION
+    share/${PROJECT_NAME}/
+)
+
 ament_package()
