--- a/road100_navigation/params/nav2_params.yaml
+++ b/road100_navigation/params/nav2_params.yaml
@@ -142,11 +142,11 @@ controller_server:
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.99
+      max_vel_x: 0.5
       max_vel_y: 0.0
       max_vel_theta: 1.0
       min_speed_xy: 0.0
-      max_speed_xy: 0.99
+      max_speed_xy: 0.5
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
@@ -192,12 +192,12 @@ local_costmap:
       height: 3
       resolution: 0.05
       # robot_radius: 0.22
-      footprint: '[ [0.04, 0.08], [-0.04, 0.08], [-0.04, -0.08], [0.04, -0.08] ]'
+      footprint: '[ [0.08, 0.08], [-0.08, 0.08], [-0.08, -0.08], [0.08, -0.08] ]'
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        cost_scaling_factor: 1.0
+        inflation_radius: 0.15
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -232,7 +232,7 @@ global_costmap:
       robot_base_frame: base_link
       use_sim_time: True
       # robot_radius: 0.22
-      footprint: '[ [0.04, 0.08], [-0.04, 0.08], [-0.04, -0.08], [0.04, -0.08] ]'
+      footprint: '[ [0.08, 0.08], [-0.08, 0.08], [-0.08, -0.08], [0.08, -0.08] ]'
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -255,8 +255,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        cost_scaling_factor: 1.0
+        inflation_radius: 0.15
       always_send_full_costmap: True
 
 map_server:
@@ -264,7 +264,7 @@ map_server:
     use_sim_time: True
     # Overridden in launch by the "map" launch configuration or provided default value.
     # To use in yaml, remove the default "map" value in the tb3_simulation_launch.py file & provide full path to map below.
-    yaml_filename: "warehouse.yaml"
+    yaml_filename: "lab_map.yaml"
 
 map_saver:
   ros__parameters:
